ready to deployment

--- a/src/index.html
+++ b/src/index.html
@@ -25,28 +25,21 @@
                 <div class="search__wrapper">
                     <h1 class="title">Поиск</h1>
                     <div class="search__searches">
-                        <div class="search__employee">Сотрудник</div>
-                        <input type="text">
-                        <div class="search__position">Должность</div>
-                        <input type="text">
-                        <div class="search__educationalInstitution">Образовательное учреждение</div>
-                        <input type="text">
+                        <div class="search__person">Сотрудник</div>
+                        <input type="text" id="search__employee">
+                        <div class="search__dolzhnost">Должность</div>
+                        <input type="text" id="search__position">
+                        <div class="search__school">Образовательное учреждение</div>
+                        <input type="text" id="search__school">
                         <div class="search__spec">Специализация</div>
-                        <input type="text">
+                        <input type="text" id="search__spec">
                     </div>
                 </div>
             </div>
 
 
             <h2 class="table__name">Сотрудники Вашей организации</h2>
-            <table class="table" id="table">
-                <tr>
-                    <th>Сотрудник</th>
-                    <th>Должность</th>
-                    <th>Образовательное учреждение</th>
-                    <th>Специализация</th>
-                </tr>
-            </table>
+            <table class="table" id="table"></table>
 
             <div class="pagination"></div>
         </div>
