--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,14 @@
     <header class="header">
         <div class="header__wrapper">
             <div class="header__left">
-                <a href="#" id="toMain" class="logo">Ваша организация</a>
+                <a href="#" class="logo">Ваша организация</a>
             </div>
-            <div class="header__right">Портфолио сотрудников</div>
+            <div class="header__center">
+                Портфолио сотрудников
+            </div>
+            <div class="header__right">
+                <div style="display: none; cursor: pointer" id="toMain">&larr; Назад</div>
+            </div>
         </div>
     </header>
 
